app/css/main.css
/* ... */
.hero-remove {
    float: right;
    font-size: 1.2em;
    color: #f7615c;
    transition: all 0.1s ease;
}

.hero-remove::before {
    position: absolute;
    top: 0;
    right: 0;
    
}

.hero-remove:hover {
    font-size: 1.35em;
    color: red;
}

.hero-section {
    text-align: left;
    padding-bottom: 10px;
}

/* index page*/
.hero-section>.panel {
    position: relative;
    height: 370px;
}

/* hero page */
.hero-section.panel {
    min-height: 760px;
}

.hero-name {
    margin-top: 10px;
}

.hero-icon {
    font-size: 120px;
    text-align: center;
    line-height: 1;
}

.hero-section>h1 {
    margin-top: 0px;
}

.hero-section h5 {
    font-weight: 400;
    margin-top: 12px;
    margin-bottom: 2px;
}

.hero-section .section-label {
    color: #777;
    text-align: center;
    font-weight: 400;
    font-size: 11px;
    margin: 0;
}

.hero-stat-section {
    margin-bottom: 8px;
}

/* padding for absolutely positioned link at bottom */
.hero-stat-section:last-of-type {
    margin-bottom: 70px;
}

.hero-img {
    margin-left: auto;
    margin-right: auto;
    width: auto;
}

.hero-img.visible-xs {
    max-height: 200px;
}

#hero-section-parent aside .hero-img {
    max-height: 760px;
}

.hero-aside {
    max-height: 760px;
}

.hero-link {
    position: absolute;
    bottom: 10px;
    left: 0.5em;
    right: 0.5em;
    margin-left: auto;
    margin-right: auto;
    display: block;
    text-align: center;
}

.hero-link a {
    position: relative;
    margin-left: auto;
    margin-right: auto;
    display: block;
}

.hero-link>a:hover {
    text-decoration: none;
    background-color: white;
    transition: background-color, 0.4s, ease;
}

.stat-bar {
    color: #fff;
    padding: 4px;
    text-align: left;
    background-color: #f99e1a;
    -webkit-border-radius: 2px;
    -moz-border-radius: 2px;
    border-radius: 2px;
    width: 100%;
    line-height: 0.7em;
    font-size: 12px;

    -webkit-transition: width 1s ease-in-out;
    -moz-transition: width 1s ease-in-out;
    -o-transition: width 1s ease-in-out;
    transition: width 1s ease-in-out;
    -webkit-animation-name:stat-bar-anim;
    -webkit-animation-duration:2s;
    -webkit-animation-timing-function:ease-out;
}

.hero-stat-section:nth-child(even) .stat-bar {
    background-color: #405275;
}

@-webkit-keyframes stat-bar-anim {
0% { width:0%; }
}

.btn-group-toggle {
    margin: 20px;
}

.glyphicon.loading {
    font-size: 2.3em;
    animation: spin 1s infinite linear;
    -webkit-animation: spin2 1s infinite linear;
}

@keyframes spin {
    from { transform: scale(1) rotate(0deg);}
    to { transform: scale(1) rotate(360deg);}
}

@-webkit-keyframes spin2 {
    from { -webkit-transform: rotate(0deg);}
    to { -webkit-transform: rotate(360deg);}
}


 /*lightish blue: #405275*/
.hero-grid .well {
    background-color: rgba(255, 255, 255, .5);
    margin-bottom: 40px;
}

.nav-tabs li.active>a {
    background-color: white;
}

.nav-tabs li:not(.active)>a:hover {
    background-color: rgba(255, 255, 255, .3);
}


/*=======================*/
/*BOOTSTRAP OVERRIDES START */
/*=======================*/

hr {
    margin-top: 10px;
    margin-bottom: 10px;
}

.panel-default {
    background-color: rgba(255, 255, 255, .5);
    padding: 10px;
}

.jumbotron {
    background-color: rgba(255, 255, 255, .5);
}

.dropdown-inline.divider {
    position: absolute;
    top: 0;
    overflow: hidden;
    height: 90%;
    width: 1px;

}

.divider-vertical {
    height: 100%;
    border-left: 1px solid gray;     /* right or left is the same */
    float: left;                     /* so BS grid doesn't break */
    opacity: 0.5;                    /* optional */
}

.navbar-inverse {
    background-color: #29364D;
}

.navbar-brand>img {
    height: 100%;
    width: auto;
}

.navbar-brand {
    background-color: white;
}

.navbar-inverse .navbar-brand:hover, 
.navbar-inverse .navbar-brand:focus {
  background-color: rgba(249, 158, 26, 1);
}

.navbar-inverse .navbar-nav li a {
    font-weight: 700;
    color: #dddddd;
}

.navbar-nav .dropdown .dropdown-menu {
    background-color: #405275;
}

.btn:focus,.btn:active:focus,.btn.active:focus,
.btn.focus,.btn:active.focus,.btn.active.focus {
    outline: none;
}

/*btn-group dropdown overrides*/
.btn-group .dropdown-menu {
    padding: 0;
}

.dropdown-menu>li:not(:first-child):not(:last-child):not(.dropdown-toggle)>label.btn {
    border-radius: 0;
}

.dropdown-menu>li:first-child:not(:last-child):not(.dropdown-toggle)>label.btn {
    border-bottom-right-radius: 0;
    border-bottom-left-radius: 0;
}

.dropdown-menu>li:last-child:not(:first-child):not(.dropdown-toggle)>label.btn {
    border-top-right-radius: 0;
    border-top-left-radius: 0;
}


/*================
  MEDIA QUERIES
 ===============*/

/* Small devices (tablets, 768px and up) */
@media (min-width: 768px) {
    
    hr {
        margin-top: 20px;
        margin-bottom: 20px;
    }

    .hero-name {
        margin-top: 20px;
    }

    .hero-section>.panel {
        position: relative;
        height: 570px;
    }

    .stat-bar {
        padding: 4px;
        line-height: 1em;
        font-size: 14px;
    }

}

/* Medium devices (desktops, 992px and up) */
@media (min-width: 992px) {
    
}

/* Large devices (large desktops, 1200px and up) */
@media (min-width: 1200px) {

}
/* ... */

